@@ -7,6 +7,11 @@
 	* Makefile.in: Regenerate.
 	* testsuite/Makefile.in: Regenerate.
 
+2012-12-07  Roland McGrath  <mcgrathr@google.com>
+
+	* testsuite/binary_unittest.cc (Sized_binary_test):
+	Use open_descriptor rather than ::open.
+
 2012-11-19  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR gold/14858
